<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/userPicEdit"
        android:src="@drawable/ic_person_black_48dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_below="@id/userPicEdit"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_add_a_photo_black_24dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nickname"
        android:id="@+id/nicknameEdit"
        android:layout_margin="10dp"
        android:layout_below="@id/imageButton"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:id="@+id/statusEdit"
        android:layout_margin="10dp"
        android:layout_below="@+id/nicknameEdit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/statusEdit"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>